# damien-archive

public/projects/characters/Fighter/: Fighter_Lorebook.md  Fighter_Templates.md
public/projects/characters/Fighter/images/: Fighter_Image_Prompts.md  image_enhancer.py
public/projects/characters/Knight/: Knight_Lorebook.md  Knight_Templates.md
public/projects/characters/Knight/images/: Knight_Image_Prompts.md
public/projects/characters/Paladin/: Paladin_Lorebook.md
public/projects/programs/binsys/: LICENSE.md  README.md  binsys.py  pyproject.toml  utils.py
public/projects/programs/binsys/binsys/: __init__.py  _boot.py  _crypto.py  _frugal.py  _image.py  _iso.py  _qemu.py  _tui.py  _util.py  cli.py
public/projects/programs/binsys/boot/: BOOTX64.EFI  BUILD.md  Cargo.toml  aios.conf  arch.conf  boot.rs  build.rs  config.rs  disk.rs  ext4.rs  gop.rs  loader.conf  main.rs  menu.rs  partition.rs  rustfmt.toml  windows.conf
public/projects/programs/binsys/kernel/: aios_kernel.config  build_aios_kernel.sh  build_initramfs.sh  init
public/projects/programs/binsys/os/asis/: asis_enhanced.py
public/projects/programs/binsys/os/core/: aios_core.py  aios_feedback.py  aios_hardware.py  aios_integration.py  aios_ipc.py  aios_memory.py  aios_process.py  aios_reward.py  aios_rl.py  aios_vfs.py
public/projects/programs/binsys/os/custom/: custom_model_format.py  custom_modeltype.py  recu_compiler.py
public/projects/programs/binsys/os/desktop/: aios_desktop.py  aios_display.py
public/projects/programs/binsys/os/kernels/: aios_bootloader_kernel.py  aios_phase4_nn.py
public/projects/programs/binsys/os/networking/: aios_network.py
public/projects/programs/binsys/os/scheduler/: aios_scheduler.py
public/projects/programs/binsys/scripts/: build-frugal  build-iso  lib.sh  quick-vm  snapshot-manager
public/projects/programs/binsys/tests/: test_cli.py  test_crypto.py  test_image.py  test_util.py  test_utils.py
public/projects/programs/sheddevs-2d-characters/: README.md  package.json
public/projects/programs/sheddevs-2d-characters/src/app/: page.tsx
public/projects/programs/sheddevs-2d-characters/src/components/character/: AnimationPlayer.tsx  CharacterPreview.tsx  SpriteSheetExporter.tsx
public/projects/programs/sheddevs-2d-characters/src/lib/: db.ts
public/projects/programs/sheddevs-2d-characters/src/lib/animation/: apply.ts  clips.ts  constraints.ts  easing.ts  edgeDetection.ts  fluidMotion.ts  schema.ts  species.ts  spritesheet.ts
(+4 files in other folders)
